<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.rates.AllRatesActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_page_toolbar_height"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/colorPrimary"
        >

        <FrameLayout
            android:id="@+id/transactionView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="@dimen/margin_small"
                app:srcCompat="@drawable/ic_dollar"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction"
                style="@style/ToolbarItemTextStyle"
                />

            <FrameLayout
                android:id="@+id/transactionTransparentLayerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/whiteTransparentTenPercent"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/exchangeRateView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/white_bottom_border_bg"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_height="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_dollar"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/margin_very_small"
                    app:srcCompat="@drawable/ic_euro"
                    />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_rate"
                style="@style/ToolbarItemTextStyle"
                />

            <FrameLayout
                android:id="@+id/exchangeRateTransparentLayerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/whiteTransparentTenPercent"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/calculatorView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="@dimen/margin_small"
                app:srcCompat="@drawable/ic_calculator"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator"
                style="@style/ToolbarItemTextStyle"
                />

            <FrameLayout
                android:id="@+id/calculatorTransparentLayerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/whiteTransparentTenPercent"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/moreView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="@dimen/margin_small"
                app:srcCompat="@drawable/ic_menu"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator"
                style="@style/ToolbarItemTextStyle"
                />

            <FrameLayout
                android:id="@+id/moreTransparentLayerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/whiteTransparentTenPercent"
                />

        </FrameLayout>

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_page_options_menu_height"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        >

        <RadioButton
            android:id="@+id/banksRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:checked="true"
            android:text="@string/banks"
            />

        <RadioButton
            android:id="@+id/exchangeLocationsRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/exchange_locations"
            />

        <RadioButton
            android:id="@+id/KBRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/kb"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_page_toolbar_height"
        android:padding="@dimen/padding_small"
        android:background="@color/whiteTransparentTwentyPercent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            android:layout_marginEnd="@dimen/margin_very_small"
            android:layout_weight="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cacheTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_gravity="center_vertical|start"
                android:text="@string/cache"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                app:srcCompat="@drawable/ic_arrow_down"
                app:tint="@color/whiteTransparentSixtyPercent"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_gravity="center_vertical|end"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_very_small"
            android:layout_marginEnd="@dimen/margin_very_small"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/currentCurrencyFlagImageView"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/ic_united_states_flag"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/exchangeCurrencyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_gravity="center_vertical"
                    tools:text="USD"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                app:srcCompat="@drawable/ic_arrow_down"
                app:tint="@color/whiteTransparentSixtyPercent"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_gravity="center_vertical|end"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_very_small"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/location"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_pin"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_page_toolbar_height"
        android:background="@drawable/shadow_bottom_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_small">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/distance"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                app:tint="@color/whiteTransparentTenPercent"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_arrow_down"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/margin_small">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_big"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/buyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/buy"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:tint="@color/whiteTransparentTenPercent"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_arrow_down"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sellTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sell"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:tint="@color/whiteTransparentTenPercent"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_arrow_down"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/banksListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="15"
        tools:listitem="@layout/organization_recycler_item"/>

</LinearLayout>